<resources>
    <string name="app_name">MyOLX</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hind_text">Nima qidiryapsiz?</string>
    <string name="to_lovlar_tarixi">To\'lovlar tarixi</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="sms_text">Xabarni qabul qilsangiz yoki\n yuborsangiz, sizning suhbatingiz shu\n yerda ko\'rinadi</string>
    <string name="like_hind_text">Sizga yoqqan e\'lon ustiga ❤ \n bosing va ular shu yerda ko\'rinadi.</string>
    <string name="like_text">Qiziqarli e\'lonlardi shu\nyerda saqlang</string>
    <string name="gallaxy_a10s_sotiladi_efwefds_grfv_gale_buvottimi">Gallaxy a10S sotiladi efwefds grfv gale buvottimi</string>
    <string name="product_about">Gallaxy 12Pro Max 256GB holati juda yaxshi,Olinganiga 1yil bulgan ishlashi juda yaxshi realni olmoqchi bulsaizar yana xam kelishtirib beraman.</string>
    <string name="mamlakat_kodini_tekshiring_va_telifon_nraqamingizdi_kiriting">Mamlakat kodini tekshiring va telifon\nraqamingizdi kiriting</string>
    <string name="first_name">Familiya</string>
    <string name="davom_ettirish">Davom ettirish</string>
    <string name="sms_kodni_kiriting">SMS kodni kiriting</string>
    <string name="sms_kod">SMS kod</string>
    <string name="kodni_qayta_olish">Kodni qayta olish</string>
    <string name="kodni_yuborish">Kodni yuborish</string>
    <string name="gallaxy_s20">Gallaxy s20</string>
    <string name="mahsulot_nomi">Mahsulot nomi</string>
    <string name="edit">Tahrirlash</string>
    <string name="o_chirish">O\'chirish</string>
    <string name="bizga_e_lonizgiz_haqida_gapirib_n_bering">Bizga e\'lonizgiz haqida gapirib\n bering</string>
    <string name="rasmlarni_qo_shish">Rasmlarni qo\'shish</string>
    <string name="sarlavha_qo_shish">Sarlavha qo\'shish*</string>
    <string name="masalan_iphone_8">Masalan: Iphone 8</string>
    <string name="bo_limni_tanlash">Bo\'limni tanlash*</string>
    <string name="bo_limni_tanlash_">Bo\'limni tanlash*</string>
    <string name="tavsif">Tavsif*</string>
    <string name="masalan_iphone_8_">Masalan: Iphone 8</string>
    <string name="kontakt_ma_lumotlari">Kontakt ma\'lumotlari</string>
    <string name="joylashuv">Joylashuv*</string>
    <string name="aloqa_uchun_shaxs">Aloqa uchun shaxs*</string>
    <string name="ism_familya">Ism familya</string>
    <string name="email">Email*</string>
    <string name="telefon_raqami">Telefon raqami</string>
    <string name="telefon_raqam">Telefon raqam</string>
    <string name="narxi">Narxi*</string>
    <string name="mahsulot_narxi">Mahsulot narxi</string>
    <string name="e_lonni_joylashtirish">E\'lonni joylashtirish</string>
    <string name="bo_limlar">Bo\'limlar</string>
    <string name="hammasi">Hammasi</string>
    <string name="tanlangan">Tanlangan</string>
    <string name="hozircha_bu_yerda_suhbatlar_n_yo_q">Hozircha bu yerda suhbatlar\n yo\'q</string>
    <string name="bugun_20_35_da_joylandi">Bugun 20:35 da joylandi</string>
    <string name="gallaxy_12pro">Gallaxy 12Pro</string>
    <string name="_12000000_so_m">12000000 so\'m</string>
    <string name="holati_f_b">Holati: F/b</string>
    <string name="shikoyat_qilish">Shikoyat qilish</string>
    <string name="uchqun">Uchqun</string>
    <string name="olx_da_2022_yildan_beri">OLX da 2022-yildan beri</string>
    <string name="bu_sotuvchi_hali_baho_olmagan_birinchilardan_bo_lib_ular_bilan_bo_lgan_tajribangizga_baho_bering">Bu sotuvchi hali baho olmagan. Birinchilardan bo\'lib ular bilan bo\'lgan tajribangizga baho bering!</string>
    <string name="fikr_bildiring">Fikr bildiring</string>
    <string name="mualifning_boshqa_e_lonlari">Mualifning boshqa e\'lonlari</string>
    <string name="chilonzor">Chilonzor</string>
    <string name="uzbekistan">Uzbekistan</string>
    <string name="sizdan_4_5_km">Sizdan 4,5 km</string>
    <string name="qo_ng_iroq_sms">Qo\'ng\'iroq /SMS</string>
    <string name="xabar_yuborish">Xabar yuborish</string>
    <string name="tahrirlash">Tahrirlash</string>
    <string name="salom_uchqun">Salom, Uchqun</string>
    <string name="sizning_hamyoningizda_0_00_so_m">Sizning hamyoningizda: 0.00 so\'m</string>
    <string name="bonuslar_0_00_bonus">Bonuslar: 0.00 bonus</string>
    <string name="e_lon_joylashtirish">E\'lon joylashtirish</string>
    <string name="sizning_e_lonlaringiz">Sizning e\'lonlaringiz</string>
    <string name="yuklangan_e_lonlar">Yuklangan e\'lonlar</string>
    <string name="suhbatlar">Suhbatlar</string>
    <string name="aktiv_suhbatlar">Aktiv suhbatlar</string>
    <string name="arxivlangan">Arxivlangan</string>
    <string name="reyting">Reyting</string>
    <string name="olingan_baholar">Olingan baholar</string>
    <string name="to_lovlar">To\'lovlar</string>
    <string name="sizning_hamyoningiz">Sizning hamyoningiz</string>
    <string name="sozlamalar_va_boshqalar">Sozlamalar va boshqalar</string>
    <string name="sozlamalar">Sozlamalar</string>
    <string name="shartlar_va_qoidalar">Shartlar va qoidalar</string>
    <string name="yordam">Yordam</string>
    <string name="foydalanuvchi_bilan_kelishuv">Foydalanuvchi bilan kelishuv</string>
    <string name="ilova_haqida">Ilova haqida</string>
    <string name="chiqish">Chiqish</string>
    <string name="nimani_qidiryapsiz">Nimani qidiryapsiz?</string>
    <string name="nimadir_qidirib_kuring_biz_albatda_n_topamiz">Nimadir qidirib kuring. Biz albatda\n topamiz</string>
    <string name="qorong_u_rejim">Qorong\'u rejim</string>
    <string name="dastur_tili">Dastur tili</string>
    <string name="ulashish">Ulashish</string>
    <string name="dastur_haqida">Dastur haqida</string>
    <string name="barcha_ruknlar">Barcha ruknlar</string>
    <string name="toshkent">Toshkent</string>
    <string name="bugun_16_40_da">Bugun 16:40 da</string>
    <string name="hozir_turgan_joyizdi_lokatisiyasini_n_olishga_ruxsat_berasizmi">Hozir turgan joyizdi lokatisiyasini\n olishga ruxsat berasizmi</string>
    <string name="bu_dasturni_ishlatib_siz_e_lonlardi_joylashtarish_sizga_kerakli_bo_lgan_mahsulotlardi_kuzatib_borishingiz_mumkun_bizni_kuzatishda_davom_eting">Bu dasturni ishlatib siz e\'lonlardi joylashtarish sizga kerakli bo\'lgan mahsulotlardi kuzatib borishingiz mumkun. Bizni kuzatishda davom eting!!!</string>
    <string name="e_lonlar">E\'lonlar</string>
    <string name="saralangan">Saralangan</string>
    <string name="e_lon_berish">E\'lon berish</string>
    <string name="profile">Profile</string>
    <string name="ro_yxat">Ro\'yxat</string>
    <string name="galereya">Galereya</string>
    <string name="mozaika">Mozaika</string>
    <string name="saq">Saqlanganlar</string>
    <string name="aktiv">Aktiv suhbatlar</string>


</resources>