<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home1"
        android:title="@string/e_lonlar" />
    <item
        android:id="@+id/saveFragment"
        android:icon="@drawable/ic_like"
        android:title="@string/saralangan" />
    <item
        android:id="@+id/addProductFragment"
        android:icon="@drawable/ic_add_product"
        android:title="@string/e_lon_berish" />
    <item
        android:id="@+id/messageFragment"
        android:icon="@drawable/ic_comment"
        android:title="@string/suhbatlar" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile" />
</menu>